--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <main>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <div>
+        <img src="imagenes/Vector.png" alt="Logo Alura" class="logo">
+        <textarea name="" id="" cols="30" rows="10"
+        class="campo-texto" placeholder="Ingrese el texto aquí"></textarea>
+        <div class="container-botones">
             <button>Encriptar</button>
             <button>Desencriptar</button>
         </div>
-
-        <div>Area para mostrar texto</div>
+        <div class="container-pantalla">Area para mostrar texto</div>
     </main>
 </body>
 </html>
