--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <textarea name="" id="" cols="30" rows="10"
         class="campo-texto" placeholder="Ingrese el texto aquí"></textarea>
         <div class="container-botones">
-            <button>Encriptar</button>
-            <button>Desencriptar</button>
+            <button class="estructura-boton boton-encriptar">Encriptar</button>
+            <button class="estructura-boton boton-desencriptar">Desencriptar</button>
         </div>
         <div class="container-pantalla">Area para mostrar texto</div>
     </main>
