anhadiendo elementos y estilos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,15 @@
             <button class="estructura-boton boton-encriptar">Encriptar</button>
             <button class="estructura-boton boton-desencriptar">Desencriptar</button>
         </div>
-        <div class="container-pantalla">Area para mostrar texto</div>
+        <div class="container-pantalla">
+            <textarea name="" id="" cols="30" rows="10" 
+            readonly class="pantalla"></textarea>
+            <img src="imagenes/Muñeco.png" alt="" class="imagen-munheco">
+            <div class="contenedor-texto">
+                <h3>No se encontro ningún mensaje</h3>
+                <p>Digite el texto que desea encriptar o desencriptar</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
