funcion para estado del area de texto

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         <div class="container-pantalla">
             <textarea name="" id="" cols="30" rows="10" 
             readonly class="pantalla"></textarea>
-            <img src="imagenes/Muñeco.png" alt="" class="imagen-munheco">
-            <div class="contenedor-texto">
-                <h3>No se encontro ningún mensaje</h3>
-                <p>Digite el texto que desea encriptar o desencriptar</p>
+            <div class="estado">
+                <img src="imagenes/Muñeco.png" alt="" class="imagen-munheco">
+                <div class="contenedor-texto">
+                    <h3>No se encontro ningún mensaje</h3>
+                    <p>Digite el texto que desea encriptar o desencriptar</p>
+                </div>
             </div>
         </div>
     </main>
+    <script src="logica.js"></script>
 </body>
 </html>
