--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <p>Digite el texto que desea encriptar o desencriptar</p>
                 </div>
             </div>
+            <button class="boton-copiar">Copiar</button>
         </div>
     </main>
     <script src="logica.js"></script>
