--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -15,6 +18,9 @@
         <div class="container-botones">
             <button class="estructura-boton boton-encriptar">Encriptar</button>
             <button class="estructura-boton boton-desencriptar">Desencriptar</button>
+        </div>
+        <div class="info">
+            <p>&#128712 Solo letras minúsculas y sin acentos</p>
         </div>
         <div class="container-pantalla">
             <textarea name="" id="" cols="30" rows="10" 
