--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,8 @@
             <button class="estructura-boton boton-desencriptar">Desencriptar</button>
         </div>
         <div class="info">
-            <p>&#128712 Solo letras minúsculas y sin acentos</p>
+            <img src="imagenes/logo-informacion.png" alt="imagen-info">
+            <p>Solo letras minúsculas y sin acentos</p>
         </div>
         <div class="container-pantalla">
             <textarea name="" id="" cols="30" rows="10" 
@@ -32,7 +33,7 @@
                     <p>Digite el texto que desea encriptar o desencriptar</p>
                 </div>
             </div>
-            <button class="boton-copiar estructura-boton">Copiar</button>
+            <button class="boton-copiar estructura-boton" >Copiar</button>
         </div>
     </main>
     <script src="logica.js"></script>
